--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Sobre mi</a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contacto</a>
-            </li>
+            
           </ul>
         </div>
       </div>
@@ -139,7 +137,7 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Persona responsable, proactiva, creativa y organizada. Con iniciativa y disposición a la
+            <p class="lead">Persona responsable, proactivo, creativo y organizado. Con iniciativa y disposición a la
 hora de aprender y enfrentar nuevos retos, asumiendo los mismos con agrado y gran
 compromiso para lograr las metas que su empresa me pudiera plantear.
 
