--- a/index.html
+++ b/index.html
@@ -218,8 +218,9 @@ crecimiento profesional y que enriquezcan su experiencia.</p>
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Contacto</h4>
-            <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p>
+            <p class="lead mb-0">Rodrigo Fernández 
+              rodrigofer10@hotmail.com
+              <br>Cel: 094 271 183</p>
           </div>
           <!--
           <div class="col-md-4 mb-5 mb-lg-0">
