--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ crecimiento profesional y que enriquezcan su experiencia.</p>
           </div>
         </div>
         <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="https://rodrigofer.ml/cv_2018.pdf">
+          <a class="btn btn-xl btn-outline-light" href="https://rodrigofer.ml/cv_2018es.pdf">
             <i class="fas fa-download mr-2"></i>
             Descargar CV
           </a>
